Return author (name) instead of id
