# flaskr/openapi.yaml
@@ -99,6 +99,8 @@ paths:
           description: Post deleted
         "404":
           description: Post not found
+      security:
+        - basic: []
 
 components:
   securitySchemes:
@@ -112,8 +114,8 @@ components:
       properties:
         id:
           type: integer
-        author_id:
-          type: integer
+        author:
+          type: string
         created:
           type: string
           format: date-time
